# plex-media-player

./: CMakeLists.txt  CONTRIBUTING.md  README.md
.github/: issue_template.md
.github/workflows/: ci.yml
CMakeModules/: CPackConfiguration.cmake  CompleteBundleWin.cmake.in  NameConfiguration.cmake  QtConfiguration.cmake  WindowsInstaller.cmake
bundle/win/: Bundle.wxs  PlexMediaPlayer-NoChromiumGPU.bat  SAM.wxs
release-notes/: 1.0.0.txt  1.0.1.txt  1.0.3.txt  1.0.4.txt  1.0.6.txt  1.1.0.txt  1.1.2.txt  1.1.3.txt  1.1.5.txt  1.1.6.txt  1.1.7.txt  1.2.3.txt  1.3.2.txt  2.0.0.txt  2.0.8.txt  2.11.0.txt  2.2.0.txt
release-notes/next/: 789.txt  example.txt
resources/inputmaps/: apple-remote.json
resources/settings/: settings_description.json
scripts/: install-dylibs.py  make_mpv_lib.bat
src/: CMakeLists.txt  KonvergoPCH.h  main.cpp
src/ai/: AIComponent.cpp  AIComponent.h  CMakeLists.txt  MediaScraper.cpp  MediaScraper.h
src/breakpad/: BreakPadDummy.cpp  BreakPadOSX.cpp  BreakPadWin32.cpp  CMakeLists.txt  CrashDumps.h
src/core/: CMakeLists.txt  ComponentManager.cpp  ComponentManager.h  Globals.h  SignalManager.cpp  SignalManager.h  Version.h
src/display/: CMakeLists.txt  DisplayComponent.cpp  DisplayComponent.h  DisplayManager.cpp  DisplayManager.h
src/display/dummy/: DisplayManagerDummy.cpp  DisplayManagerDummy.h
src/display/osx/: DisplayManagerOSX.cpp  DisplayManagerOSX.h
src/display/rpi/: DisplayManagerRPI.cpp  DisplayManagerRPI.h
src/display/win/: DisplayManagerWin.cpp  DisplayManagerWin.h
src/display/x11/: DisplayManagerX11.cpp
src/input/: CMakeLists.txt  InputCEC.cpp  InputCEC.h  InputComponent.cpp  InputComponent.h  InputKeyboard.h  InputLIRC.cpp  InputLIRC.h  InputMapping.cpp  InputMapping.h  InputRoku.cpp  InputRoku.h  InputSDL.cpp  InputSDL.h  InputSocket.cpp  InputSocket.h
src/input/apple/: AppleRemoteDelegate.h  InputAppleMediaKeys.h  InputAppleRemote.h
src/player/: AudioDeviceManager.cpp  AudioDeviceManager.h  CMakeLists.txt  CodecManager.cpp  CodecManager.h  CodecsComponent.cpp  CodecsComponent.h  OpenGLDetect.cpp  PlayerComponent.cpp  PlayerComponent.h  PlayerQuickItem.cpp  PlayerQuickItem.h  QtHelper.h  SubtitleManager.cpp  SubtitleManager.h
src/plugins/RPI_jpeg/: QRPIJpegHandler.cpp  QRPIJpegHandler.h  QRPIJpegPlugin.cpp  QRPIJpegPlugin.h  brcmjpeg.cpp  brcmjpeg.h
src/power/: CMakeLists.txt  PowerComponent.cpp  PowerComponent.h  PowerComponentDBus.cpp  PowerComponentDBus.h  PowerComponentMac.cpp  PowerComponentMac.h  PowerComponentWin.cpp  PowerComponentWin.h  PowerComponentX11.cpp  PowerComponentX11.h
src/remote/: CMakeLists.txt  GDMManager.cpp  GDMManager.h  RemoteComponent.cpp  RemoteComponent.h  RemoteSubscriber.cpp  RemoteSubscriber.h
src/server/: CMakeLists.txt  HTTPServer.cpp  HTTPServer.h
src/settings/: AudioSettingsController.cpp  AudioSettingsController.h  CMakeLists.txt  SettingsComponent.cpp  SettingsComponent.h  SettingsSection.cpp  SettingsSection.h  SettingsValue.h
src/shared/: CMakeLists.txt  LocalJsonClient.cpp  LocalJsonClient.h  LocalJsonServer.cpp  LocalJsonServer.h  Names.h  Paths.cpp  Paths.h  UniqueApplication.h
src/system/: CMakeLists.txt  OEUpdateManager.cpp  OEUpdateManager.h  SystemComponent.cpp  SystemComponent.h  UpdateManager.cpp  UpdateManager.h  UpdateManagerWin32.cpp  UpdateManagerWin32.h  UpdaterComponent.cpp  UpdaterComponent.h
src/system/openelec/: OESystemComponent.cpp  OESystemComponent.h  SystemdManager.cpp  SystemdManager.h
src/tools/helper/: CMakeLists.txt  CrashUploader.cpp  CrashUploader.h  HelperMain.cpp  HelperSettings.h  HelperSocket.cpp  HelperSocket.h
src/tools/socket-client/: CMakeLists.txt  SocketClient.cpp
src/ui/: CMakeLists.txt  ErrorMessage.cpp  ErrorMessage.h  EventFilter.cpp  EventFilter.h  KonvergoWindow.cpp  KonvergoWindow.h  webview.qml
src/utils/: CMakeLists.txt  CachedRegexMatcher.cpp  CachedRegexMatcher.h  HelperLaunchd.cpp  HelperLaunchd.h  HelperLauncher.cpp  HelperLauncher.h  Log.cpp  Log.h  PlatformUtils.h  Utils.cpp  Utils.h
src/utils/osx/: OSXUtils.h
src/utils/win/: WinUtils.cpp  WinUtils.h
