add_library(breakpad STATIC BreakPad.h)

if(BREAKPAD_FOUND)
  if(UNIX AND NOT APPLE)
    target_sources(breakpad PRIVATE BreakPadLinux.cpp)
  elseif(APPLE)
    target_sources(breakpad PRIVATE BreakPadOSX.cpp)
  elseif(WIN32)
    target_sources(breakpad PRIVATE BreakPadWin32.cpp)
  else()
    target_sources(breakpad PRIVATE BreakPadDummy.cpp)
  endif()
else()
  target_sources(breakpad PRIVATE BreakPadDummy.cpp)
endif()

target_include_directories(breakpad PUBLIC .)
std_target_properties(breakpad)
clang_tidy(breakpad)
